--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.comorevi</groupId>
     <artifactId>CoSSeAutomaticTasks</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.2-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
@@ -29,8 +29,8 @@
 
     <repositories>
         <repository>
-            <id>regularbox</id>
-            <url>http://ci.regularbox.com/plugin/repository/everything/</url>
+            <id>potestas-repo</id>
+            <url>https://repo.potestas.xyz/main</url>
         </repository>
     </repositories>
 
@@ -40,6 +40,13 @@
             <artifactId>nukkit</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.comorevi</groupId>
+            <artifactId>MoneySAPI</artifactId>
+            <version>2.3.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/MoneySAPI-2.3.0-SNAPSHOT.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
